<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="101dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="top"
        android:text="@string/welcome"
        android:textColor="#000000"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="5dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/averia_libre_bold"
        android:gravity="top"
        android:text="@string/log_back_in"
        android:textColor="#000000"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/welcomepage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="@font/averia_libre_bold"
        android:text="@string/login"
        android:textColor="#fdfdfd"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="@font/averia_libre_bold"
        android:text="@string/signup"
        android:textColor="#fdfdfd"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/averia_libre_bold"
        android:text="@string/sign_in_as"
        android:textColor="#000000"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.27" />

    <TextView
        android:id="@+id/guest"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/averia_libre_bold"
        android:text="@string/guest"
        android:textColor="#A2BCF3"
        android:textSize="17dp"
        android:onClick="signInAsGuest"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.16"
        android:layout_marginTop="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>